--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,4 @@
-/* .header {
-  background-color: lightseagreen;
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,4 +16,4 @@
   display: flex;
   gap: 20px;
   align-items: center;
-} */
+}
