--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,10 +19,6 @@
 }
 
 .card_section {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
   margin-top: 20px;
 }
 
@@ -34,4 +30,19 @@
   width: 328px;
   height: 328px;
   border-radius: 10px;
+}
+
+.card_items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding: 0 20px;
 }
