--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -1,5 +1,5 @@
 .modal {
-  font-family: "Cabinet Grotesk", "Ariel", "sans-serif";
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
   font-weight: 700px;
@@ -25,7 +25,7 @@
   width: 100%;
   border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 28px, 28px, 28px, 28px;
+  padding: 28px, 28px, 36px, 28px;
 }
 
 .modal__close-button {
@@ -42,20 +42,88 @@
   background-size: contain;
 }
 
-.modal__add-garment {
-  font-family: "Cabinet Grotesk", "Ariel", "sans-serif";
+.modal__add-form_buttom {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-weight: 700;
   font-size: 16px;
   width: 124px;
   height: 36px;
+  margin-top: 20px;
   gap: 8px;
   border-radius: 4px;
   padding: 8px, 16px, 8px, 16px;
   border: none;
-  /* color: hex(0, 0, 0, 0.3); */
+  background-color: rgba(0, 0, 0, 0.3);
   color: #fff;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
 }
 
-/* .modal__add-garment-name {
-  color: #fff;
+/* .modal__add-form {
+  width: 496px;
 } */
+
+.modal__temp-label {
+  width: 26px;
+  height: 20px;
+  top: 10px;
+  margin-left: 8px;
+}
+
+.modal__radio-button {
+  /* font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700px;
+  line-height: 20px;
+  max-width: 60px; */
+  color: #000;
+  border-radius: 1px;
+  border-color: rgba(0, 0, 0, 0.5);
+  margin-left: 20px;
+}
+
+.modal__text {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700px;
+  line-height: 20px;
+  width: 173px;
+  padding-top: 20px;
+  margin-left: 20px;
+}
+
+.modal__title {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700px;
+  line-height: 20px;
+  max-width: 60px;
+  max-width: 95;
+  margin-left: 20px;
+  margin-right: 0 auto;
+}
+
+.modal__input {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700px;
+  line-height: 20px;
+  width: 100%;
+  margin-left: 20px;
+  border: none;
+  border-bottom: 1px solid #000;
+  line-height: 20px;
+}
+
+.modal__input:first-of-type {
+  margin-top: 5px;
+}
+
+.modal__input:last-of-type {
+  margin-top: 5px;
+}
