--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -1,11 +1,12 @@
 .modal {
-  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  /* font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  font-weight: 700px;
-  line-height: 20px;
+  font-weight: 700;
+  line-height: 20px; */
   color: #000;
   position: fixed;
+  z-index: 999;
   top: 0;
   right: 0;
   left: 0;
@@ -57,7 +58,7 @@
   color: #fff;
   margin-top: 30px;
   margin-left: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 /* .modal__add-form {
@@ -72,12 +73,12 @@
 }
 
 .modal__radio-button {
-  /* font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  font-weight: 700px;
-  line-height: 20px;
-  max-width: 60px; */
+  font-weight: 700;
+  width: 16px;
+  height: 16px;
   color: #000;
   border-radius: 1px;
   border-color: rgba(0, 0, 0, 0.5);
@@ -88,9 +89,9 @@
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  font-weight: 700px;
+  font-weight: 700;
   line-height: 20px;
-  width: 173px;
+  width: 100%;
   padding-top: 20px;
   margin-left: 20px;
 }
@@ -99,25 +100,25 @@
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  font-weight: 700px;
+  font-weight: 700;
   line-height: 20px;
-  max-width: 60px;
-  max-width: 95;
+  width: 100%;
   margin-left: 20px;
   margin-right: 0 auto;
+  margin-top: 40px;
 }
 
 .modal__input {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  font-weight: 700px;
+  font-weight: 700;
   line-height: 20px;
-  width: 100%;
+  height: 20px;
+  width: 440px;
   margin-left: 20px;
   border: none;
   border-bottom: 1px solid #000;
-  line-height: 20px;
 }
 
 .modal__input:first-of-type {
