--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,8 +1,34 @@
+.card {
+  width: 325px;
+  height: 328px;
+  left: 38px;
+  text-align: center;
+  border: rgba(0, 0, 0, 0.3);
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__name {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: center;
+  width: 100%;
+  height: 20px;
+  color: rgba(0, 0, 0, 0.6);
+  border-radius: 4px;
+  margin-bottom: -20px;
+  z-index: 20;
+}
+
 .card_image {
   width: 328px;
-  height: 328px;
+  min-height: 328px;
   border-radius: 10px;
-}
-.card_name {
-  text-align: center;
 }
