--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -1,9 +1,4 @@
 .modal {
-  /* font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 20px; */
   color: #000;
   position: fixed;
   z-index: 999;
@@ -21,10 +16,8 @@
 .modal__content {
   background: #fff;
   position: relative;
-  max-width: 496px;
-  /* min-width: 496px; */
-  width: 100%;
-  border-radius: 20px;
+  min-width: 498px;
+  border-radius: 16px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   padding: 28px, 28px, 36px, 28px;
 }
@@ -34,7 +27,7 @@
   border: none;
   width: 16px;
   height: 16px;
-  color: #000;
+  color: rgba(0, 0, 0, 0.3);
   background-color: transparent;
   bottom: calc(100% - 50px);
   left: calc(100% - 50px);
@@ -61,12 +54,12 @@
   margin-bottom: 40px;
 }
 
-/* .modal__add-form {
-  width: 496px;
-} */
-
 .modal__temp-label {
-  width: 26px;
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  /* font-weight: 700; */
+  width: 100%;
   height: 20px;
   top: 10px;
   margin-left: 8px;
@@ -96,13 +89,28 @@
   margin-left: 20px;
 }
 
+.modal__popup-text {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  width: 100%;
+  margin-left: 20px;
+  padding-top: 10px;
+}
+
+.modal__popup-text:last-of-type {
+  margin-bottom: 20px;
+}
+
 .modal__title {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  width: 100%;
+  width: px;
   margin-left: 20px;
   margin-right: 0 auto;
   margin-top: 40px;
@@ -127,4 +135,10 @@
 
 .modal__input:last-of-type {
   margin-top: 5px;
+}
+
+.modal__popup-image {
+  min-width: 498px;
+  min-height: 498px;
+  border-radius: 16px;
 }
