Updated Main.js key._id

--- a/src/ModalWithForm/ModalWithForm.css
+++ b/src/ModalWithForm/ModalWithForm.css
@@ -110,7 +110,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  width: px;
+  width: 100%;
   margin-left: 20px;
   margin-right: 0 auto;
   margin-top: 40px;
