--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,8 @@
 .main {
   padding: 0 20px;
+  /* display: flex; */
+  /* justify-content: space-between;
+  flex-wrap: nowrap; */
 }
 
 .card_section {
@@ -9,6 +12,9 @@
   font-weight: 700;
   margin-top: 20px;
   line-height: 25px;
+  /* display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap; */
 }
 
 .card_items {
