--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -19,7 +19,7 @@
   font-weight: 700;
   line-height: 20px;
   text-align: center;
-  width: 100%;
+  /* width: 100%; */
   height: 20px;
   color: rgba(0, 0, 0, 0.6);
   border-radius: 4px;
