--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,30 +1,3 @@
-.main {
-  padding: 0 20px;
-  /* display: flex; */
-  /* justify-content: space-between;
-  flex-wrap: nowrap; */
-}
-
-.card_section {
-  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  margin-top: 20px;
-  line-height: 25px;
-  /* display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap; */
-}
-
-.card_items {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 20px;
-}
-
 .weather {
   position: relative;
 }
@@ -35,7 +8,7 @@
   font-weight: 700;
   line-height: 40px;
   position: absolute;
-  top: 12px;
+  padding-top: 12px;
   left: 16px;
   color: white;
 }
