--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -19,13 +19,21 @@
   font-weight: 700;
   line-height: 20px;
   text-align: center;
-  /* width: 100%; */
   height: 20px;
-  color: rgba(0, 0, 0, 0.6);
-  border-radius: 4px;
   z-index: 20;
   margin-top: 20px;
   position: absolute;
+}
+
+.name_frame {
+  width: 100px;
+  height: 24px;
+  text-wrap: nowrap;
+  text-align: center;
+  padding: 2px, 12px, 2px, 12px;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #fff;
 }
 
 .card_image {
