Updated css for ClothingSection, Profile, Sidebar, and ToggleSwitch

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-.profile {
+/* .profile {
   width: 229px;
   height: 56px;
   margin-left: 40px;
@@ -10,5 +10,24 @@
 }
 
 .profile__sidebar {
+  position: relative;
+} */
+
+/* .profile__clothes {
+
+} */
+
+.profile__sidebar {
+  width: 229px;
+  height: 56px;
+  margin-left: 40px;
+  padding-top: 50px;
+  align-items: flex-start;
+  flex-direction: column;
+  display: flex;
+  /* position: absolute; */
+}
+
+.profile {
   position: relative;
 }
