--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -1,50 +1,53 @@
-/* .profile__items {
-  margin: 0;
-} */
+.profile__items {
+  /* width: 100%; */
+  /* margin: 0px; */
+  /* top: 135px; */
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
 .profile__clothes-section {
   width: 1015px;
-  height: 676px;
-  left: 250px;
+  left: 385px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin: 0px;
 }
 
 .profile__add-button {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  line-height: 25px;
-  width: 88px;
-  height: 25px;
-  top: 2px;
+  width: 100%;
+  /* height: 25px; */
   left: 100px;
-  color: #000;
+  margin: 0px;
+  color: rgba(0, 0, 0, 0.6);
   border: none;
   background-color: #fff;
-  position: absolute;
+  /* position: relative; */
   display: flex;
   align-items: center;
   justify-content: center;
   padding-right: 0px;
 }
 
-.profile__add-new {
+.profile__your-items {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  line-height: 25px;
-  width: 88px;
-  height: 25px;
-  top: 73px;
-  left: 250px;
-  position: absolute;
+  width: 100%;
+  /* height: 25px; */
+  left: 385px;
+  /* position: relative; */
+  margin: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 0px;
+  /* padding-right: 20px; */
 }
