--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -1,16 +1,15 @@
 .profile__items {
-  /* width: 100%; */
-  /* margin: 0px; */
-  /* top: 135px; */
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  margin: 0px;
   flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding-left: 40px; */
 }
 
 .profile__clothes-section {
   width: 1015px;
-  left: 385px;
-  position: relative;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -23,17 +22,14 @@
   font-style: normal;
   font-weight: 700;
   width: 100%;
-  /* height: 25px; */
-  left: 100px;
   margin: 0px;
   color: rgba(0, 0, 0, 0.6);
   border: none;
   background-color: #fff;
-  /* position: relative; */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-right: 0px;
+  /* align-items: center;
+  justify-content: center; */
+  padding-left: 20px;
 }
 
 .profile__your-items {
@@ -42,12 +38,9 @@
   font-style: normal;
   font-weight: 700;
   width: 100%;
-  /* height: 25px; */
-  left: 385px;
-  /* position: relative; */
   margin: 0px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  /* padding-right: 20px; */
+  /* justify-content: center; */
+  /* padding-left: 40px; */
 }
