Updated Profile.js, clothesXSection.js, and weather.js

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,7 @@
 .profile {
-  position: relative;
   display: flex;
-  padding-top: 40px;
+  padding-top: 50px;
+  width: 100%;
 }
 
 .profile__sidebar {
