--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -1,11 +1,11 @@
 .profile__items {
   width: 100%;
   margin: 0px;
-  flex-wrap: wrap;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding-left: 40px; */
+  flex-direction: column;
+  padding-left: 100px;
 }
 
 .profile__clothes-section {
@@ -27,8 +27,6 @@
   border: none;
   background-color: #fff;
   display: flex;
-  /* align-items: center;
-  justify-content: center; */
   padding-left: 20px;
 }
 
@@ -41,6 +39,5 @@
   margin: 0px;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  /* padding-left: 40px; */
+  padding-left: 100px;
 }
