--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -64,7 +64,7 @@
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
-  /* font-weight: 700; */
+  font-weight: 700;
   width: 100%;
   height: 20px;
   top: 10px;
