--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,19 +1,8 @@
-/* .sideBar {
-  display: flex;
-  gap: 20px; */
-/* width: 100%;
-  left: 40px;
-  justify-content: space-between;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px; */
-/* } */
-
 .profile__info {
   display: flex;
   width: 100%;
-  /* gap: 20px; */
+  margin: 0px;
+  justify-content: space-around;
 }
 
 .profile__image {
@@ -36,6 +25,6 @@
   color: #000;
   margin: 0px;
   align-items: center;
-  justify-content: center;
   display: flex;
+  justify-content: ;
 }
