Updated utils.js, api.js, weatherApi.js, and ModalWithForm,js

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -36,6 +36,10 @@
   background-size: contain;
 }
 
+.modal__close-button:hover {
+  cursor: pointer;
+}
+
 .modal__add-form_buttom {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-weight: 700;
