New updates to project

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -202,6 +202,7 @@
   margin-right: 255px;
   /* border: none; */
   background-color: #fff;
+  text-decoration: none;
 }
 
 .modal__submitbutton:disabled {
