New updates to project

--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,4 +1,4 @@
-.modal__delete-button {
+.item__delete-button {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
