--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -27,6 +27,8 @@
   align-items: center;
   display: flex;
   justify-content: space-around;
+  padding-left: 20px;
+  white-space: nowrap;
 }
 
 /* .profile__sign-out {
