--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -26,7 +26,7 @@
   position: absolute;
 }
 
-.name_frame {
+.name__frame {
   width: 100px;
   height: 24px;
   text-wrap: nowrap;
@@ -37,31 +37,33 @@
   background-color: #fff;
 }
 
-.card_image {
+.card__image {
   width: 328px;
   min-height: 328px;
   border-radius: 10px;
 }
 
-.card_image:hover {
+.card__image:hover {
   cursor: pointer;
 }
 
 .item__like-button {
   background-image: url("../../images/like-icon.svg");
-  background: no-repeat;
+  background-repeat: no-repeat;
   width: 18px;
   height: 15px;
   border: 2px;
   border-color: rgba(0, 0, 0, 0.6);
   align-items: center;
   position: absolute;
-  background-color: #fff;
   cursor: pointer;
+  top: 25px;
+  left: 220px;
+  background-size: cover;
 }
 
 .item__like-button_active {
   background-image: url("../../images/like-icon.svg");
-  background: no-repeat;
+  /* background-repeat: no-repeat; */
   background-color: #000;
 }
