--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -31,6 +31,20 @@
   white-space: nowrap;
 }
 
+/* .Profile-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 1px;
+  background-color: #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  margin-left: 10px;
+} */
+
 /* .profile__sign-out {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 20px;
