New updates to project

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,7 +10,6 @@
   min-height: 60px;
   padding: 0 20px;
   text-decoration: none;
-  display: flex;
 }
 
 .header__logo {
@@ -21,7 +20,7 @@
 
 .header__right-section {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
   text-decoration: none;
 }
@@ -34,7 +33,7 @@
   line-height: 24px;
   border: none;
   background-color: #fff;
-  margin-right: 10px;
+  /* gap: 10px; */
 }
 
 .add__clothes:hover {
@@ -42,7 +41,6 @@
 }
 
 .header__profile {
-  display: flex;
   align-items: center;
   text-decoration: none;
   color: inherit;
@@ -52,7 +50,7 @@
 .header__avatar-image {
   width: 40px;
   height: 40px;
-  border-radius: 1px;
+  border-radius: 50%;
   margin-left: 10px;
 }
 
@@ -71,7 +69,10 @@
   text-decoration: none;
 }
 
-.header__username {
+.header__username-avatar {
   padding-right: 10px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  /* gap: 10px; */
 }
