--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,19 +1,25 @@
+/* .sidebar {
+  width: 56px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
 .profile__info {
   display: flex;
   width: 100%;
-  margin: 0px;
-  justify-content: space-around;
+  /* margin: 0px; */
+  /* justify-content: space-around; */
 }
 
 .profile__image {
   width: 56px;
   height: 56px;
-  padding-top: 119px;
-  margin-bottom: 40px;
-  margin-left: 40px;
-  border: 1px;
   display: flex;
   align-items: center;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile__name {
@@ -23,17 +29,17 @@
   font-weight: 700;
   width: 100%;
   color: #000;
-  margin: 0px;
+  /* margin: 0px; */
   align-items: center;
   display: flex;
   justify-content: space-around;
-  padding-left: 20px;
-  white-space: nowrap;
+  /* padding-left: 20px; */
+  /* white-space: nowrap; */
 }
 
-/* .Profile-avatar {
-  width: 40px;
-  height: 40px;
+.Profile-avatar {
+  /* width: 40px;
+  height: 40px; */
   border-radius: 1px;
   background-color: #ccc;
   display: flex;
@@ -43,7 +49,7 @@
   font-weight: bold;
   color: #000;
   margin-left: 10px;
-} */
+}
 
 /* .profile__sign-out {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
