--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -260,14 +260,43 @@
 }
 
 .modal__error-text {
-  /* font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700; */
+  position: relative;
   width: 138px;
   height: 20px;
   color: #ff4d00;
   padding-left: 10px;
-  /* border-bottom: 440px;
-  border-color: #ff4d00; */
+  /* display: inline-block; */
+  padding-top: 5px;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+.modal__input.error {
+  position: relative;
+  border: none;
+  outline: none;
+  /* width: 300px; */
+}
+
+.modal__error-text::before {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 300px;
+  height: 1px;
+  /* margin-left: 100px; */
+  border-bottom: 2px solid #ff4d00;
+  padding-bottom: 100px;
+}
+
+.modal__error-text::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+  width: 440px;
+  height: 1px;
+  border-bottom: 1px dotted #ff4d00;
+  padding-bottom: 10px;
 }
