--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -210,23 +210,6 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-/* .modal__title_data {
-  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 20px;
-  width: 100%;
-  margin-left: 20px;
-  margin-right: 0 auto;
-  margin-top: 200px;
-} */
-
-/* .modal__label {
-  display: block;
-  margin-bottom: 10px;
-} */
-
 .modal__title_change-profile_data {
   margin-bottom: 0;
 }
@@ -257,6 +240,7 @@
   margin-top: 8px;
   background-color: #fff;
   border: none;
+  white-space: nowrap;
 }
 
 .modal__error-text {
@@ -265,38 +249,16 @@
   height: 20px;
   color: #ff4d00;
   padding-left: 10px;
-  /* display: inline-block; */
-  padding-top: 5px;
   margin-bottom: 0;
   margin-left: 0;
+  white-space: nowarp;
 }
 
 .modal__input.error {
   position: relative;
   border: none;
   outline: none;
-  /* width: 300px; */
-}
-
-.modal__error-text::before {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: 0;
-  width: 300px;
-  height: 1px;
-  /* margin-left: 100px; */
+  color: #ff4d00;
   border-bottom: 2px solid #ff4d00;
-  padding-bottom: 100px;
-}
-
-.modal__error-text::after {
-  content: "";
-  position: absolute;
-  bottom: -8px;
-  left: 0;
-  width: 440px;
-  height: 1px;
-  border-bottom: 1px dotted #ff4d00;
-  padding-bottom: 10px;
+  white-space: nowrap;
 }
