--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,25 +1,15 @@
-/* .sidebar {
-  width: 56px;
-  height: 56px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 .profile__info {
   display: flex;
   width: 100%;
-  /* margin: 0px; */
-  /* justify-content: space-around; */
+  align-items: center;
 }
 
 .profile__image {
   width: 56px;
   height: 56px;
-  display: flex;
-  align-items: center;
   border-radius: 50%;
   object-fit: cover;
+  display: block;
 }
 
 .profile__name {
@@ -27,20 +17,18 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  width: 100%;
   color: #000;
-  /* margin: 0px; */
   align-items: center;
   display: flex;
-  justify-content: space-around;
-  /* padding-left: 20px; */
-  /* white-space: nowrap; */
+  justify-content: center;
+  margin-left: 20px;
+  white-space: nowrap;
 }
 
 .Profile-avatar {
-  /* width: 40px;
-  height: 40px; */
-  border-radius: 1px;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
   background-color: #ccc;
   display: flex;
   justify-content: center;
@@ -50,33 +38,3 @@
   color: #000;
   margin-left: 10px;
 }
-
-/* .profile__sign-out {
-  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  width: 100%;
-  color: #000;
-  top: 232px;
-  padding-top: 10px;
-  padding-left: 0px;
-  display: flex;
-  background-color: #fff;
-  border: none;
-} */
-
-/* .profile__change-profile-data {
-  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  width: 100%;
-  color: #000;
-  top: 199px;
-  padding-top: 20px;
-  padding-left: 0px;
-  display: flex;
-  background-color: #fff;
-  border: none;
-} */
