--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -57,7 +57,7 @@
 .header__avatar-placeholder {
   width: 40px;
   height: 40px;
-  border-radius: 1px;
+  /* border-radius: 1px; */
   background-color: #ccc;
   display: flex;
   justify-content: center;
