--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -26,13 +26,13 @@
 }
 
 .Profile-avatar {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
+  width: 100%;
+  /* width: 56px;
+  height: 56px; */
   background-color: #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content: center;
+  align-items: center; */
   font-size: 20px;
   font-weight: bold;
   color: #000;
