Updated codes to fix project error

--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -7,8 +7,7 @@
   width: 101px;
   height: 24px;
   top: 515px;
-  /* left: 360px; */
-  right: 0;
+  right: 20px;
   border: none;
   color: #ff4d00;
   position: absolute;
