--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 60px;
+  height: 60px;
   padding: 0 20px;
   text-decoration: none;
 }
@@ -33,7 +33,7 @@
   line-height: 24px;
   border: none;
   background-color: #fff;
-  /* gap: 10px; */
+  white-space: nowrap;
 }
 
 .add__clothes:hover {
@@ -44,7 +44,6 @@
   align-items: center;
   text-decoration: none;
   color: inherit;
-  text-decoration: none;
 }
 
 .header__avatar-image {
@@ -52,21 +51,13 @@
   height: 40px;
   border-radius: 50%;
   margin-left: 10px;
+  object-fit: cover;
+  display: block;
 }
 
-.header__avatar-placeholder {
-  width: 40px;
-  height: 40px;
-  /* border-radius: 1px; */
-  background-color: #ccc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: #fff;
-  margin-left: 10px;
-  text-decoration: none;
+.avatar {
+  border: 0;
+  object-fit: contain;
 }
 
 .header__username-avatar {
