--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,4 +1,8 @@
 .profile__info {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
   display: flex;
   width: 100%;
   align-items: center;
@@ -12,6 +16,11 @@
   display: block;
 }
 
+.profile-avatar {
+  border-radius: 0;
+  object-fit: contain;
+}
+
 .profile__name {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 20px;
@@ -23,18 +32,4 @@
   justify-content: center;
   margin-left: 20px;
   white-space: nowrap;
-}
-
-.Profile-avatar {
-  width: 100%;
-  /* width: 56px;
-  height: 56px; */
-  background-color: #ccc;
-  /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
-  font-size: 20px;
-  font-weight: bold;
-  color: #000;
-  margin-left: 10px;
 }
