--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -30,6 +30,10 @@
   padding-left: 20px;
 }
 
+.profile__add-button {
+  cursor: pointer;
+}
+
 .profile__your-items {
   font-family: "Cabinet Grotesk", "Arial", "sans-serif";
   font-size: 20px;
