--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -47,6 +47,10 @@
 }
 
 .header__avatar-image {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 700;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -55,12 +59,12 @@
   display: block;
 }
 
-.avatar {
-  border: 0;
-  object-fit: contain;
-}
-
 .header__username-avatar {
+  font-family: "Cabinet Grotesk", "Arial", "sans-serif";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
   padding-right: 10px;
   text-decoration: none;
   display: flex;
